--- a/app/src/main/res/layout/item_generic.xml
+++ b/app/src/main/res/layout/item_generic.xml
@@ -4,19 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/item_list_height"
-    android:background="@drawable/ripple_bounded"
-    android:clickable="true"
-    android:focusable="true">
+    android:layout_height="@dimen/list_item_height"
+    android:background="?android:selectableItemBackground">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/itemArtContainer"
+        android:id="@+id/itemArtHold"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_margin="8dp"
-        app:cardCornerRadius="3dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="H,1:1"
+        app:layout_constraintDimensionRatio="V,1:1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -36,16 +35,12 @@
         android:layout_marginEnd="8dp"
         android:gravity="bottom"
         android:singleLine="true"
-        android:text="@string/primary"
+        android:text="@string/lorem_ipsum"
         android:textColor="?attr/fg"
-        android:textSize="@dimen/text_size"
-        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/itemSecondary"
-        app:layout_constraintEnd_toStartOf="@+id/itemAddToQueue"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/itemArtContainer"
-        app:layout_constraintTop_toTopOf="@+id/itemArtContainer"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintEnd_toStartOf="@+id/itemAdd"
+        app:layout_constraintStart_toEndOf="@+id/itemArtHold"
+        app:layout_constraintTop_toTopOf="@+id/itemArtHold" />
 
     <TextView
         android:id="@+id/itemSecondary"
@@ -53,25 +48,26 @@
         android:layout_height="0dp"
         android:gravity="top"
         android:singleLine="true"
-        android:text="@string/secondary"
+        android:text="@string/lorem_ipsum"
         android:textColor="?attr/fg_alt"
-        android:textSize="@dimen/text_size"
-        app:layout_constraintBottom_toBottomOf="@+id/itemArtContainer"
+        app:layout_constraintBottom_toBottomOf="@+id/itemArtHold"
         app:layout_constraintEnd_toEndOf="@+id/itemPrimary"
         app:layout_constraintStart_toStartOf="@+id/itemPrimary"
         app:layout_constraintTop_toBottomOf="@+id/itemPrimary" />
 
     <ImageButton
-        android:id="@+id/itemAddToQueue"
+        android:id="@+id/itemAdd"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginEnd="8dp"
-        android:background="@drawable/ripple_unbounded"
-        android:contentDescription="@string/queue_add"
+        android:background="?android:selectableItemBackgroundBorderless"
+        android:contentDescription="@string/drag_handle"
         android:padding="12dp"
-        app:tint="?attr/fg"
-        app:layout_constraintBottom_toBottomOf="@+id/itemSecondary"
+        android:scaleType="centerInside"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/itemPrimary"
-        app:srcCompat="@drawable/ic_list_add" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_list_add"
+        app:tint="?attr/fg" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
